cluster/apps/home/zigbee2mqtt/vs-zigbee2mqtt.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: zigbee2mqtt
  namespace: home
spec:
  hosts:
    - zigbee.${INTERNAL_DOMAIN}
  gateways:
    - istio-ingress/cluster-ingress-gateway
  http:
    - route:
        - destination:
            host: zigbee2mqtt.home.svc.cluster.local
            port:
              number: 8080
